--- a/package.json
+++ b/package.json
@@ -1,15 +1,23 @@
 {
   "name": "@shoio/core",
-  "version": "1.0.0",
+  "version": "1.0.2",
   "description": "",
-  "main": "index.js",
+  "main": "dist/index.js",
+  "types": "dist/index.d.ts",
+  "private": false,
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "./node_modules/.bin/nodemon examples/server.js"
+    "dev": "./node_modules/.bin/nodemon examples/server.js",
+    "build": "tsc",
+    "prepublish": "npm run build"
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "nodemon": "^1.17.3"
+    "nodemon": "^1.17.3",
+    "typescript": "^3.2.1"
+  },
+  "dependencies": {
+    "lodash.functionsin": "^4.3.0"
   }
 }
